test/types/string/bradc/string2complex/badStringToComplex.good
badStringToComplex.chpl:3: error: Illegal character when converting from string to complex(64): '+'
