test/types/string/bradc/string2complex/badStringToComplex.chpl
var s = "1.2+";

var c = s:complex(64);
